Spring Logger Lab 1 complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#logging.level.root=WARN
+logging.level.com.flatiron.spring.FlatironSpring=TRACE
 
 #Removed for protection
 spring.security.oauth2.client.registration.github.client-id=
