Spring Logger Lab 2 complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-#logging.level.root=WARN
-logging.level.com.flatiron.spring.FlatironSpring=TRACE
+#logging.level.root=INFO
+#logging.level.com.flatiron.spring.FlatironSpring=TRACE
+#logging.file.name=flatiron-spring.log
 
 #Removed for protection
 spring.security.oauth2.client.registration.github.client-id=
